--- a/Menu/index.html
+++ b/Menu/index.html
@@ -49,7 +49,53 @@
     </section>
 
     <section class="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div class="d-flex text-banner">
+                        <h1><b>Escolha sua comida <b class="color-primary">favorita.</b></b></h1>
+                        <p>
+                            Aproveite nosso cardápio! Escolha o que desejar e receba em sua casa de forma rápida e segura.
+                        </p>
+                        <div>
+                            <a class="btn btn-yellow mt-4 mr-3">
+                                Ver cardápio
+                            </a>
+                            <a href="#" class="btn btn-white btn-icon-left mt-4">
+                                <span class="icon-left">
+                                    <i class="fa fa-phone"></i>
+                                </span>
+                                (31) 90000-0000
+                            </a>
+                        </div>
+                    </div>
+                    <a class="btn btn-sm btn-white btn-social mt-4 mr-3" href="#">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a class="btn btn-sm btn-white btn-social mt-4 mr-3" href="#">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a class="btn btn-sm btn-white btn-social mt-4" href="#">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                </div>
 
+                <div class="col-6">
+                    <div class="card-banner"></div>
+                    <div class="d-flex img-banner">
+                        <img src="img/burguer.png" alt="burger">
+                    </div>    
+                    <div class="card card-case">
+                        "Entraga rápida e funcionários simpáticos.
+                        <br>A comida chegou quente e <br>
+                        muito saborosa!"
+                        <span class="card-case-name">
+                            <b>Walace Rodrigues</b>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="servicos" id="servicos">
