--- a/Menu/index.html
+++ b/Menu/index.html
@@ -384,7 +384,43 @@
     </section>
 
     <section class="reserva" id="reservas">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
 
+                    <div class="card-secondary">
+                        
+                        <div class="row">
+                            <div class="col-7">
+                                <span class="hint-title"><b>Reserva</b></span>
+                                <h1 class="title">
+                                    <b>Quer reservar um horário ?</b>
+                                </h1>
+                                <p class="pr-5">
+                                    Mande uma mensagem clicando no botão abaixo
+                                    <br>
+                                    Reserve sua data e horário de forma simples e rápida.
+                                </p>
+                                <a class="btn btn-yellow mt-4">
+                                    Fazer reserva
+                                </a>
+                            </div>
+
+                            <div class="col-5">
+                                <div class="card-reserva">
+                                    
+                                </div>
+                                <div class="d-flex img-banner">
+                                    <img src="./img/icone-reserva.svg" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
