API CEP / validações

--- a/Menu/index.html
+++ b/Menu/index.html
@@ -420,8 +420,10 @@
                     <div class="col-4">
                         <div class="form-group container-cep">
                             <label>CEP:</label>
-                            <input type="text" class="form-control" id="txtCEP">
-                            <a class="btn btn-yellow btn-sm"><i class="fa fa-search"></i></a>
+                            <input id="txtCEP" type="text" class="form-control">
+                            <a class="btn btn-yellow btn-sm" onclick="cardapio.metodos.buscarCep()">
+                                <i class="fa fa-search"></i>
+                            </a>
                         </div>
                     </div>
 
@@ -467,7 +469,7 @@
                     <div class="col-2">
                         <div class="form-group">
                             <label>UF:</label>
-                            <select id="ddlUF" class="form-control">
+                            <select id="ddlUf" class="form-control">
                                 <option value="-1">...</option>
                                 <option value="AC">AC</option>
                                 <option value="AL">AL</option>
@@ -576,11 +578,11 @@
                     </p>
                 </div>
 
-                <a onclick="cardapio.metodos.carregarEtapa(2)" class="btn btn-yellow float-right" id="btnEtapaPedido">
+                <a onclick="cardapio.metodos.carregarEndereco()" class="btn btn-yellow float-right" id="btnEtapaPedido">
                     Continuar
                 </a>
 
-                <a onclick="cardapio.metodos.carregarEtapa(3)" class="btn btn-yellow float-right hidden" id="btnEtapaEndereco">
+                <a onclick="cardapio.metodos.resumoPedido()" class="btn btn-yellow float-right hidden" id="btnEtapaEndereco">
                     Revisar pedido
                 </a>
 
@@ -603,6 +605,5 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/popper.min.js"></script>
     <script type="text/javascript" src="js/dados.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-</body>
+    <script type="text/javascript" src="js/app.js"></script></body>
 </html>
