--- a/Menu/index.html
+++ b/Menu/index.html
@@ -516,23 +516,6 @@
                     <div class="col-12">
                         <div class="row" id="listaItensResumo">
                         
-                            <div class="col-12 item-carrinho resumo">
-                                <div class="img-produto-resumo">
-                                    <img src="img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" alt="">
-                                </div>   
-                                <div class="dados-produto">
-                                    <p class="title-produto-resumo">
-                                        <b>Nome do Produto</b>
-                                    </p>
-                                    <p class="price-produto-resumo">
-                                        <b>R$ 100,00</b>
-                                    </p>
-                                </div> 
-                                <p class="quantidade-produto-resumo">
-                                    x <b>3</b>
-                                </p>                          
-                            </div>
-
                         </div>
                     </div>
 
@@ -548,10 +531,10 @@
                         </div>
                         <div class="dados-produto">
                             <p class="texto-endereco">
-                                <b id="resumoEndereco">Rua teste, 200, bairro teste</b>
+                                <b id="resumoEndereco"></b>
                             </p>
                             <p class="cidade-endereco" id="cidadeEndereco">
-                                Cidade-MG / 33903-000
+                                
                             </p>
                         </div>
                     </div>
