--- a/Menu/index.html
+++ b/Menu/index.html
@@ -569,7 +569,7 @@
                     Revisar pedido
                 </a>
 
-                <a class="btn btn-yellow float-right hidden" id="btnEtapaResumo">
+                <a href="#"  class="btn btn-yellow float-right hidden" id="btnEtapaResumo" target="_blank">
                     Enviar pedido
                 </a>
 
