--- a/Menu/index.html
+++ b/Menu/index.html
@@ -75,7 +75,7 @@
                             <a class="btn btn-yellow mt-4 mr-3">
                                 Ver cardápio
                             </a>
-                            <a href="#" class="btn btn-white btn-icon-left mt-4">
+                            <a href="#" class="btn btn-white btn-icon-left mt-4" id="btnLigar">
                                 <span class="icon-left">
                                     <i class="fa fa-phone"></i>
                                 </span>
@@ -83,13 +83,13 @@
                             </a>
                         </div>
                     </div>
-                    <a class="btn btn-sm btn-white btn-social mt-4 mr-3" href="#">
+                    <a class="btn btn-sm btn-white btn-social mt-4 mr-3" href="#" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a class="btn btn-sm btn-white btn-social mt-4 mr-3" href="#">
+                    <a class="btn btn-sm btn-white btn-social mt-4 mr-3" href="#" target="_blank">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="btn btn-sm btn-white btn-social mt-4" href="#">
+                    <a class="btn btn-sm btn-white btn-social mt-4 btn-whatsapp" href="#" target="_blank" onclick="cardapio.metodos.carregarWhatsapp()">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
@@ -307,9 +307,9 @@
 
                     </div>
 
-                    <a class="btn btn-sm btn-white btn-social mr-3 active">1</a>
-                    <a class="btn btn-sm btn-white btn-social mr-3">2</a>
-                    <a class="btn btn-sm btn-white btn-social">3</a>
+                    <a id="btnDepoimento-1" class="btn btn-sm btn-white btn-social mr-3 active" onclick="cardapio.metodos.abrirDepoimento(1)">1</a>
+                    <a id="btnDepoimento-2" class="btn btn-sm btn-white btn-social mr-3" onclick="cardapio.metodos.abrirDepoimento(2)">2</a>
+                    <a id="btnDepoimento-3" class="btn btn-sm btn-white btn-social" onclick="cardapio.metodos.abrirDepoimento(3)">3</a>
 
                 </div>
 
@@ -335,7 +335,7 @@
                                     <br>
                                     Reserve sua data e horário de forma simples e rápida.
                                 </p>
-                                <a class="btn btn-yellow mt-4">
+                                <a  class="btn btn-yellow mt-4" href="#" id="btnReserva" target="_blank">
                                     Fazer reserva
                                 </a>
                             </div>
@@ -379,7 +379,7 @@
                     <a class="btn btn-sm btn-white btn-social mr-3" href="#">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="btn btn-sm btn-white btn-social" href="#">
+                    <a class="btn btn-sm btn-white btn-social btn-whatsapp" href="#" target="_blank" onclick="cardapio.metodos.carregarWhatsapp()">
                         <i class="fab fa-whatsapp"></i>
                     </a>
 
